--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <div id="main" class="main ui">
-      <h1 class="ui dividing centered header">Custom Timers</h1>
+      <h1 class="ui dividing centered header">Simple Timers</h1>
       <div id="content"></div>
     </div>
     <script type="text/babel" src="./js/client.js"></script>
